--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .header {
     background-color: white;
-    grid-column-start: 2
+    grid-column-start: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr
 }
 
 .content {
@@ -14,6 +17,8 @@
 .sidebar {
     background-color:aqua;
     grid-row: 1/ span 2;
+    color: white;
+    text-shadow: 1px 1px 1px #000000
 }
 
 .page {
@@ -43,3 +48,21 @@ body {
     grid-column-start: 2;
     grid-row-start: 2
 }
+
+.tabs {
+    list-style: none;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 1px #000000
+}
+
+.buttons {
+    grid-column: 2;
+    grid-row: 2
+}
+
+.greeting {
+    grid-column: 1;
+    grid-row: 2
+}
+
+img {}
