--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
     grid-column-start: 2;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr
+    grid-template-rows: 1fr 1fr;
+    height: 160px;
 }
 
 .content {
@@ -83,6 +84,11 @@ button {
     grid-row: 2;
     display: grid;
     grid-template-columns: 60px 1fr;
+    margin-left: 40px;
+    grid-template-rows: 60px;
+    height: 60px;
+    margin-top: 20px;
+    width: 400px
 }
 
 .greetingTxt {
@@ -101,7 +107,11 @@ button {
 }
 
 .login {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50px 50px 125px;
+    margin: 10px;
+    justify-items: end;
+    align-items: center
 }
 
 .superCool, .lessCool, .impossible, .easy, .adBlocker, .money, .announcementContent, .trendingContent {
@@ -123,10 +133,20 @@ button {
 
 .login {
     justify-content: end;
+    padding-right: 10px;
 }
 
 .buttons {
     justify-self: end;
+    display: flex;
+    align-items: end;
+    padding: 20px;
+}
+
+button {
+    height: 30px;
+    width: 90px;
+    margin: 10px;
 }
 
 .cardTitle {
@@ -176,4 +196,28 @@ button {
 
 .communities {
     margin-bottom: 30px;
+}
+
+.searchbar {
+    display: flex;
+    flex-direction: row;
+    height: 30px;
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-bottom: 30px;
+}
+
+.hello {
+    font-weight: bold
+}
+
+.morgan {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#text {
+    margin-left: 20px;
+    border-radius: 25px;
+    border: 2px solid gray
 }
